[tool.poetry]
name = "spapros"
version = "0.1.0"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Fully automated spatial transcriptomics probe selection."
authors = ["Lukas Heumos <lukas.heumos@posteo.net>", "Louis Kümmerle <louis.kuemmerle@helmholtz-muenchen.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/theislab/spapros"
repository = "https://github.com/theislab/spapros"
documentation = "https://spapros.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = "^7.1.2"
rich = ">=10.1.0"
PyYAML = "^5.4.1"
Jinja2 = "^3.0.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
scanpy = "^1.7.2"
seaborn = "^0.11.1"
matplotlib = "^3.4.1"
leidenalg = "^0.8.4"
questionary = "^1.9.0"
xgboost = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.812"
typeguard = "^2.12.0"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.5b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-rtd-dark-mode = "^1.2.1"
Pygments = "^2.9.0"
sphinx-click = "^3.0.0"

[tool.poetry.scripts]
spapros = "spapros.__main__:main"

[tool.coverage.paths]
source = ["spapros", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spapros"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
