[tool.poetry]
name = "spapros"
version = "0.1.1"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Probe set selection for targeted spatial transcriptomics."
authors = ["Lukas Heumos <lukas.heumos@posteo.net>", "Louis Kümmerle <louis.kuemmerle@helmholtz-muenchen.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/theislab/spapros"
repository = "https://github.com/theislab/spapros"
documentation = "https://spapros.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = "^8.0.1"
rich = ">=10.1.0"
PyYAML = "^5.4.1"
Jinja2 = "^3.0.1"
numpy = "^1.21.1"
pandas = "^1.3.0"
scanpy = "^1.8.1"
seaborn = "^0.11.1"
matplotlib = "^3.4.1"
leidenalg = "^0.8.7"
questionary = "^1.10.0"
xgboost = "^1.6.1"
pypi-latest = "^0.1.0"
"ruamel.yaml" = "^0.17.10"
jupyter-sphinx = "^0.3.2"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
pandoc = "^2.1"
bandit = "1.7.2"
venndata = "^0.1.0"
Pillow = "9.0.0"
UpSetPlot = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^6.2"}
safety = "^1.9.0"
mypy = "^0.910"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.11b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-rtd-dark-mode = "^1.2.3"
Pygments = "^2.9.0"
sphinx-click = "^3.0.0"
types-pkg-resources = "^0.1.3"
types-requests = "^2.25.0"
types-attrs = "^19.1.0"
zipp = "^3.7.0"
importlib-metadata = "^4.11.2"
panel = "^0.13.1"
nbsphinx = "^0.8.8"
sphinx-gallery = "^0.10.1"
nbsphinx-link = "^1.3.0"
jupyter = "^1.0.0"
ipython = "7.18.1"
ipykernel = "5.4.3"
nbconvert = "^6.4.2"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"

[tool.poetry.scripts]
spapros = "spapros.__main__:main"

[tool.coverage.paths]
source = ["spapros", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spapros"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
