[tool.poetry]
name = "spapros"
version = "0.1.5"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Probe set selection for targeted spatial transcriptomics."
authors = ["Lukas Heumos <lukas.heumos@posteo.net>", "Louis Kümmerle <louis.kummerle@helmholtz-munich.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/theislab/spapros"
repository = "https://github.com/theislab/spapros"
documentation = "https://spapros.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.9,<3.11"
click = ">=8.0.1"
rich = ">=10.1.0"
PyYAML = ">=6.0.1"
Jinja2 = ">=3.0.1"
numpy = ">=1.21.1"
pandas = "^1.3.0"
scanpy = ">=1.9.8"
seaborn = ">=0.11.1"
matplotlib = ">=3.6.3"
leidenalg = ">=0.8.7"
questionary = ">=1.10.0"
xgboost = ">=1.6.1"
pypi-latest = ">=0.1.0"
"ruamel.yaml" = ">=0.17.10"
jupyter-sphinx = ">=0.3.2"
nox = ">=2023.04.22"
nox-poetry = ">=1.0.3"
pandoc = ">=2.1"
bandit = ">=1.7.6"
venndata = ">=0.1.0"
Pillow = ">=10.0.2"
UpSetPlot = ">=0.7.0"
#python = ">=3.9,<3.11"
#click = "^8.0.1"
#rich = ">=10.1.0"
#PyYAML = "^6.0.1"
#Jinja2 = "^3.0.1"
#numpy = "^1.21.1"
#pandas = "^1.3.0"
#scanpy = "^1.9.8"
#seaborn = ">=0.11.1"
#matplotlib = "^3.6.3"
#leidenalg = "^0.8.7"
#questionary = "^1.10.0"
#xgboost = "^1.6.1"
#pypi-latest = "^0.1.0"
#"ruamel.yaml" = "^0.17.10"
#jupyter-sphinx = "^0.3.2"
#nox = "^2023.04.22"
#nox-poetry = "^1.0.3"
#pandoc = "^2.1"
#bandit = "^1.7.6"
#venndata = "^0.1.0"
#Pillow = "^10.0.2"
#UpSetPlot = ">=0.7.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.4"
coverage = {extras = ["toml"], version = ">=7.4"}
safety = ">=2.3.5"
mypy = ">=1.8.0"
typeguard = ">=4.1.5"
xdoctest = {extras = ["colors"], version = ">=1.1.2"}
sphinx = "^5.3.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = ">=3.6.0"
flake8 = ">=7.0.0"
black = ">=22.3.0"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=23.12.2"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
pep8-naming = ">=0.13.3"
reorder-python-imports = ">=3.12.0"
pre-commit-hooks = ">=4.5.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-rtd-dark-mode = "^1.2.3"
Pygments = "^2.9.0"
sphinx-click = "^3.0.0"
types-pkg-resources = ">=0.1.3"
types-requests = ">=2.31.0"
types-attrs = ">=19.1.0"
zipp = ">=3.17.0"
importlib-metadata = ">=7.0.1"
panel = "^1.3.7"
nbsphinx = "^0.8.8"
sphinx-gallery = "^0.14.0"
nbsphinx-link = "^1.3.0"
jupyter = ">=1.0.0"
ipython = ">=7.31.1"
ipykernel = ">=6.28.0"
nbconvert = "^6.4.2"
nox = ">=2023.04.22"
nox-poetry = ">=1.0.3"

[tool.poetry.scripts]
spapros = "spapros.__main__:main"

[tool.coverage.paths]
source = ["spapros", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spapros"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
implicit_optional = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
